--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,15 @@
 {
     "name": "laravel/lumen",
     "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
+    "keywords": [
+        "framework",
+        "laravel",
+        "lumen"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
+        "ext-json": "*",
         "php": "^7.3|^8.0",
         "guzzlehttp/guzzle": "^7.3",
         "laravel/lumen-framework": "^8.0",
